# Examples

./: AUTHORS  CMakeLists.txt  Examples.code-workspace  README.md  cmake.py  format.sh  run_all.sh
.circleci/: config.yaml  config.yml
.github/: CODEOWNERS  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md
appendix/: CMakeLists.txt  lambda.cpp  move.cpp  new.cpp  ranges.cpp  ranges_pure.cpp  shared_pointer.cpp  templates.cpp  unique_pointer.cpp
benchmark/: CMakeLists.txt  benchmark_containers.cpp  data_future_hpx.sh  openmp_parallel.cpp  run_benchmark_future.sh
cpp/: CMakeLists.txt
cpp/Chapter_10/: CMakeLists.txt
cpp/Chapter_11/: CMakeLists.txt  Listing_11_1.cpp  Listing_11_2.cpp  Listing_11_3.cpp
cpp/Chapter_13/: CMakeLists.txt  Listing_13_1.cpp  Listing_13_4.cpp
cpp/Chapter_14/: CMakeLists.txt  Listing_14_7.cpp
cpp/Chapter_15/: CMakeLists.txt
cpp/Chapter_20/: CMakeLists.txt  Listing_20_4.cpp
cpp/Chapter_3/: CMakeLists.txt  Listing_3_6.cpp
cpp/Chapter_7/: CMakeLists.txt  Listing_7_3.cpp  Listing_7_7.cpp
cpp/Chapter_9/: CMakeLists.txt
cpp/active_messaging/: Listing_14_1.cpp  Listing_14_2.cpp  main_example_action.cpp
cpp/appendix/: ranges.cpp
cpp/async/: main_async_benchmark.cpp
cpp/distrib/: mpi_fractal_improved.cpp  mpi_openmp_fractal.cpp
cpp/distributed_code/: distributed_fractal_improved_main.cpp  distributed_fractal_main.cpp  distributed_taylor.cpp
cpp/include/: config.hpp  data_client.hpp  data_server.hpp  distributed_fractal_worker_improved.hpp  io.hpp  kernel.hpp  pbm.hpp  taylor_action.hpp  taylor_component.hpp  taylor_data.hpp
cpp/parallel/: deadlock.cpp  mutex2.cpp  race_condition.cpp  race_condition2.cpp  scoped_lock.cpp
cpp/parallel_algos/: Listing_10_4.cpp
hpx/: CMakeLists.txt  parallel_for.cpp  parallel_for_async.cpp  parallel_for_chunk.cpp  parallel_reduce_simd.cpp  plain_action.cpp  serialization.cpp  taylor_action.hpp  taylor_component.hpp  taylor_data.hpp  taylor_hpx.cpp  taylor_hpx_distributed.cpp  taylor_hpx_future.cpp  taylor_hpx_future_coroutine.cpp  taylor_hpx_future_dataflow.cpp  taylor_hpx_future_unwrap.cpp  topology.cpp
notebooks/: Appendix.ipynb  Chapter_10.ipynb  Chapter_11.ipynb  Chapter_13.ipynb  Chapter_14.ipynb  Chapter_14_Serialization.ipynb  Chapter_15.ipynb  Chapter_20.ipynb  Chapter_3.ipynb  Chapter_4.ipynb  Chapter_7.ipynb  Chapter_8.ipynb  Chapter_9.ipynb  active_messaging.ipynb  appendix.ipynb  async.ipynb  distrib.ipynb  distributed_code.ipynb  distributed_fractal_worker.hpp  parallel.ipynb  parallel_algos.ipynb  parallel_code.ipynb  serialization.ipynb  stl.ipynb  util.hpp
parallel/: CMakeLists.txt  taylor_future.cpp  taylor_par.cpp  taylor_thread.cpp
parallel_algorithm/: CMakeLists.txt  taylor_par.cpp
scripts/: run_benchmark_loop.sh  run_benchmark_openmp.sh  run_benchmark_thread.sh
set/: CMakeLists.txt  algorithm_parallel.cpp  config.h  config.hpp  distributed_fractal_main.cpp  distributed_fractal_worker.hpp  future_parallel.cpp  future_parallel_hpx.cpp  future_parallel_hpx_coroutine.cpp  kernel.h  kernel.hpp  mandelbrot.sbatch  mpi.cpp  numa_parallel.cpp  openmp_parallel.cpp  run_benchmark_future.sh  run_benchmark_future_hpx.sh  run_benchmark_loop.sh  run_benchmark_thread.sh  serial.cpp  thread_parallel.cpp
sl/: CMakeLists.txt  array_container.cpp  array_language.cpp  average.cpp  benchmark_containers.cpp  iterator_loop.cpp  iterator_types.cpp  median.cpp  run_benchmark.sh  slide.cpp  taylor.cpp
util/: CMakeLists.txt  pbm.hpp  pbm3.cpp
