# Copyright (c) 2022 AUTHORS
#
# Distributed under the Boost Software License, Version 1.0. (See accompanying
# file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)

add_subdirectory(Chapter_15)
add_subdirectory(Chapter_3)
add_subdirectory(Chapter_9)
add_subdirectory(Chapter_7)
add_subdirectory(Chapter_13)
add_subdirectory(Chapter_20)
add_subdirectory(Chapter_11)
add_subdirectory(Chapter_10)
add_subdirectory(Chapter_14)
