# Copyright (c) 2022 AUTHORS
#
# Distributed under the Boost Software License, Version 1.0. (See accompanying
# file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)

add_executable(average average.cpp)
add_executable(array_language array_language.cpp)
add_executable(array_container array_container.cpp)
add_executable(benchmark_containers benchmark_containers.cpp)
add_executable(median median.cpp)
add_executable(iterator_loop iterator_loop.cpp)
add_executable(iterator_types iterator_types.cpp)
