add_executable(Listing_7_7 Listing_7_7.cpp)
add_executable(Listing_7_5 Listing_7_5.cpp)
add_executable(Listing_7_3 Listing_7_3.cpp)
add_executable(Listing_7_1 Listing_7_1.cpp)
add_executable(Listing_7_6 Listing_7_6.cpp)
add_executable(Listing_7_2 Listing_7_2.cpp)
add_executable(Listing_7_4 Listing_7_4.cpp)
